--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 @-webkit-keyframes slideup {
   0% {
     -webkit-transform: translateY(200px);
-            transform: translateY(200px);
+    transform: translateY(200px);
     opacity: 0;
   }
   80% {
@@ -9,7 +9,7 @@
   }
   100% {
     -webkit-transform: translateY(0);
-            transform: translateY(0);
+    transform: translateY(0);
     opacity: 1;
   }
 }
@@ -17,7 +17,7 @@
 @keyframes slideup {
   0% {
     -webkit-transform: translateY(200px);
-            transform: translateY(200px);
+    transform: translateY(200px);
     opacity: 0;
   }
   80% {
@@ -25,7 +25,7 @@
   }
   100% {
     -webkit-transform: translateY(0);
-            transform: translateY(0);
+    transform: translateY(0);
     opacity: 1;
   }
 }
@@ -156,7 +156,7 @@ bodY {
 .wave:nth-child(6) {
   animation-delay: 0.5s;
   opacity: 0;
-
+  
 }
 .wave:nth-child(7) {
   animation-delay: 0.6s;
@@ -174,23 +174,6 @@ bodY {
   animation-delay: 0.9s;
   opacity: 0;
 }
-
-@keyframes wave {
-  0% {
-    transform: scale(0);
-    opacity: 1;
-  }
-  50% {
-    transform: scale(1);
-  }
-  100% {
-    transform: scale(0);
-    opacity: 0;
-    
-  }
-}
-
-
 /*#################################*\
 ####          Media querys       ####
 ####                     #### 
@@ -235,15 +218,15 @@ header {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   padding-right: 20%;
 }
 
 .header__restaurant .logo {
   padding: 2px 0 0 8%;
   -webkit-animation: none;
-          animation: none;
+  animation: none;
 }
 
 .header__restaurant .arrow {
@@ -259,7 +242,7 @@ header {
   font-size: 3rem;
   padding-top: 5px;
   -webkit-animation: opacitystartlogo 4s ease-in-out;
-          animation: opacitystartlogo 4s ease-in-out;
+  animation: opacitystartlogo 4s ease-in-out;
 }
 
 footer {
@@ -269,7 +252,7 @@ footer {
   padding: 30px 0 20px 0;
   line-height: 30px;
   -webkit-animation: opacitystart 3s;
-          animation: opacitystart 3s;
+  animation: opacitystart 3s;
 }
 
 @media (min-width: 768px) {
@@ -318,7 +301,7 @@ footer li a {
   width: 100%;
   height: 255px;
   -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
 }
 
 @media (min-width: 768px) {
@@ -326,7 +309,7 @@ footer li a {
     width: 100%;
     height: 400px;
     -o-object-fit: cover;
-       object-fit: cover;
+    object-fit: cover;
   }
 }
 
@@ -335,7 +318,7 @@ footer li a {
     width: 100%;
     height: 550px;
     -o-object-fit: cover;
-       object-fit: cover;
+    object-fit: cover;
   }
 }
 
@@ -363,7 +346,7 @@ footer li a {
   display: -ms-flexbox;
   display: flex;
   -ms-flex-pack: distribute;
-      justify-content: space-around;
+  justify-content: space-around;
   padding-top: 5%;
   font-size: 2rem;
 }
@@ -371,8 +354,8 @@ footer li a {
 @media (min-width: 1024px) {
   .place .place__name {
     -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center;
   }
 }
 
@@ -381,8 +364,8 @@ footer li a {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
 }
 
 @media (min-width: 1024px) {
@@ -397,17 +380,6 @@ footer li a {
   }
 }
 
-.place .place__name .icon.heart-fill {
-  width: 30px;
-  z-index: 1;
-  fill: transparent;
-}
-
-.place .place__name .icon.heart-fill path:hover {
-  -webkit-animation: fillheart 1s ease-in-out;
-          animation: fillheart 1s ease-in-out;
-  fill: url(#heart_degrade);
-}
 
 .place .place__name .icon.heart-border {
   position: relative;
@@ -437,8 +409,8 @@ footer li a {
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
   margin-top: 30px;
 }
 
@@ -447,7 +419,7 @@ footer li a {
   margin-left: 5%;
   text-align: left;
   -webkit-animation: opacitystart 2500ms;
-          animation: opacitystart 2500ms;
+  animation: opacitystart 2500ms;
 }
 
 @media (min-width: 768px) {
@@ -486,18 +458,18 @@ footer li a {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
   height: 70px;
   width: 345px;
   background-color: white;
   border-radius: 20px;
   -webkit-box-shadow: 1px 1px 15px #a5a5a5;
-          box-shadow: 1px 1px 15px #a5a5a5;
+  box-shadow: 1px 1px 15px #a5a5a5;
   margin: auto;
   margin-top: 15px;
   -webkit-animation: slideup ease-in-out 1500ms 100ms;
-          animation: slideup ease-in-out 1500ms 100ms;
+  animation: slideup ease-in-out 1500ms 100ms;
 }
 
 @media (min-width: 768px) {
@@ -508,42 +480,42 @@ footer li a {
 
 .place .menu .menu__part__dishes.delay-1 {
   -webkit-animation: slideup ease-in-out 1500ms 300ms;
-          animation: slideup ease-in-out 1500ms 300ms;
+  animation: slideup ease-in-out 1500ms 300ms;
 }
 
 .place .menu .menu__part__dishes.delay-2 {
   -webkit-animation: slideup ease-in-out 1500ms 500ms;
-          animation: slideup ease-in-out 1500ms 500ms;
+  animation: slideup ease-in-out 1500ms 500ms;
 }
 
 .place .menu .menu__part__dishes.delay-3 {
   -webkit-animation: slideup ease-in-out 1500ms 700ms;
-          animation: slideup ease-in-out 1500ms 700ms;
+  animation: slideup ease-in-out 1500ms 700ms;
 }
 
 .place .menu .menu__part__dishes.delay-4 {
   -webkit-animation: slideup ease-in-out 1500ms 900ms;
-          animation: slideup ease-in-out 1500ms 900ms;
+  animation: slideup ease-in-out 1500ms 900ms;
 }
 
 .place .menu .menu__part__dishes.delay-5 {
   -webkit-animation: slideup ease-in-out 1500ms 1100ms;
-          animation: slideup ease-in-out 1500ms 1100ms;
+  animation: slideup ease-in-out 1500ms 1100ms;
 }
 
 .place .menu .menu__part__dishes.delay-6 {
   -webkit-animation: slideup ease-in-out 1500ms 1300ms;
-          animation: slideup ease-in-out 1500ms 1300ms;
+  animation: slideup ease-in-out 1500ms 1300ms;
 }
 
 .place .menu .menu__part__dishes.delay-7 {
   -webkit-animation: slideup ease-in-out 1500ms 1500ms;
-          animation: slideup ease-in-out 1500ms 1500ms;
+  animation: slideup ease-in-out 1500ms 1500ms;
 }
 
 .place .menu .menu__part__dishes.delay-8 {
   -webkit-animation: slideup ease-in-out 1500ms 1700ms;
-          animation: slideup ease-in-out 1500ms 1700ms;
+  animation: slideup ease-in-out 1500ms 1700ms;
 }
 
 .place .menu .menu__part__dishes:hover .menu__part__title h3 {
@@ -574,18 +546,18 @@ footer li a {
 
 .place .menu .menu__part__dishes:hover .menu__part__price {
   -webkit-transform: translateX(-60px);
-          transform: translateX(-60px);
+  transform: translateX(-60px);
 }
 
 .place .menu .menu__part__dishes:hover .menu__part__check {
   -webkit-transform: scaleX(1);
-          transform: scaleX(1);
+  transform: scaleX(1);
   opacity: 1;
 }
 
 .place .menu .menu__part__dishes:hover .fa-check-circle:before {
   -webkit-transform: rotate(360deg);
-          transform: rotate(360deg);
+  transform: rotate(360deg);
   -webkit-transition: -webkit-transform 500ms ease-in-out;
   transition: -webkit-transform 500ms ease-in-out;
   transition: transform 500ms ease-in-out;
@@ -634,9 +606,9 @@ footer li a {
   width: 70px;
   border-radius: 0 20px 20px 0;
   -webkit-transform-origin: right;
-          transform-origin: right;
+  transform-origin: right;
   -webkit-transform: scaleX(0);
-          transform: scaleX(0);
+  transform: scaleX(0);
   -webkit-transition: -webkit-transform 500ms;
   transition: -webkit-transform 500ms;
   transition: transform 500ms;
@@ -652,11 +624,11 @@ footer li a {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   background: #99E2D0;
   height: 70px;
   width: 70px;
@@ -668,15 +640,15 @@ footer li a {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   height: 50px;
   width: 100%;
   background-color: #eaeaea;
   -webkit-box-shadow: 5px 5px 10px;
-          box-shadow: 5px 5px 10px;
+  box-shadow: 5px 5px 10px;
   -webkit-animation: opacitystart 4s;
-          animation: opacitystart 4s;
+  animation: opacitystart 4s;
 }
 
 #recherche .recherche_bloc {
@@ -684,8 +656,8 @@ footer li a {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   width: 350px;
 }
 
@@ -726,7 +698,7 @@ input::placeholder {
 .explore {
   height: 285px;
   -webkit-animation: opacitystart 4s;
-          animation: opacitystart 4s;
+  animation: opacitystart 4s;
   text-align: center;
   background-color: #f6f6f6;
   padding-top: 10px;
@@ -752,13 +724,13 @@ input::placeholder {
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
   height: 440px;
   text-align: left;
   margin-left: 10px;
   -webkit-animation: opacitystart 4s;
-          animation: opacitystart 4s;
+  animation: opacitystart 4s;
 }
 
 @media (min-width: 768px) {
@@ -791,18 +763,18 @@ input::placeholder {
   display: flex;
   -webkit-box-orient: horizontal;
   -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
+  -ms-flex-direction: row;
+  flex-direction: row;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
   height: 75px;
   width: 325px;
   margin: auto;
   background-color: #f6f6f6;
   border-radius: 20px;
   -webkit-box-shadow: 1px 1px 15px #a5a5a5;
-          box-shadow: 1px 1px 15px #a5a5a5;
+  box-shadow: 1px 1px 15px #a5a5a5;
   line-height: 75px;
 }
 
@@ -851,13 +823,13 @@ input::placeholder {
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   -webkit-animation: opacitystart 4s;
-          animation: opacitystart 4s;
+  animation: opacitystart 4s;
 }
 
 @media (min-width: 768px) {
@@ -873,13 +845,13 @@ input::placeholder {
     display: flex;
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
-        -ms-flex-direction: row;
-            flex-direction: row;
+    -ms-flex-direction: row;
+    flex-direction: row;
     -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
+    flex-wrap: wrap;
     -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center;
     max-width: 1024px;
   }
 }
@@ -891,7 +863,7 @@ input::placeholder {
   margin: 10px 20px 10px 20px;
   border-radius: 20px;
   -webkit-box-shadow: 1px 1px 15px #a5a5a5;
-          box-shadow: 1px 1px 15px #a5a5a5;
+  box-shadow: 1px 1px 15px #a5a5a5;
   text-align: left;
 }
 
@@ -906,7 +878,7 @@ input::placeholder {
   width: 335px;
   border-radius: 20px 20px 0 0;
   -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
 }
 
 .restaurant .restaurant__card .restaurant__card-new {
@@ -924,7 +896,7 @@ input::placeholder {
   display: -ms-flexbox;
   display: flex;
   -ms-flex-pack: distribute;
-      justify-content: space-around;
+  justify-content: space-around;
 }
 
 .restaurant .restaurant__card .restaurant__card__name {
@@ -940,8 +912,8 @@ input::placeholder {
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;
 }
 
 .restaurant .restaurant__card .icon.heart-fill {
@@ -953,10 +925,12 @@ input::placeholder {
 .restaurant .restaurant__card .icon.heart-fill path:hover {
   -webkit-animation: fillheart 1s ease-in-out;
           animation: fillheart 1s ease-in-out;
+          stroke-width: 0;
   fill: url(#heart_degrade);
 }
 
-.restaurant .restaurant__card .icon.heart-border {
+
+.restaurant .restaurant__card .icon.heart-fill{
   position: relative;
   right: 31px;
   width: 32px;
@@ -976,7 +950,7 @@ input::placeholder {
   width: 220px;
   border-radius: 30px;
   -webkit-box-shadow: 1px 1px 15px #a5a5a5;
-          box-shadow: 1px 1px 15px #a5a5a5;
+  box-shadow: 1px 1px 15px #a5a5a5;
   border: none;
   line-height: 50px;
   cursor: pointer;
@@ -995,13 +969,13 @@ input::placeholder {
 .btn:hover {
   opacity: 0.6;
   -webkit-box-shadow: 1px 1px 20px #FF79DA;
-          box-shadow: 1px 1px 20px #FF79DA;
+  box-shadow: 1px 1px 20px #FF79DA;
 }
 
 .btn-command {
   margin-top: 25px;
   -webkit-animation: opacitystart 3s;
-          animation: opacitystart 3s;
+  animation: opacitystart 3s;
 }
 
 @media (min-width: 768px) {
